master: Added favicon and fixed title css on ios

--- a/src/game/NavBar/NavBar.css
+++ b/src/game/NavBar/NavBar.css
@@ -23,6 +23,6 @@
 
 .title {
     font-size: 34px;
-    font-family: fantasy;
+    font-family: Impact, fantasy;
     text-align: center;
 }
